--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,2 +1,8 @@
 @import 'Variables';
 @import 'Mixins';
+
+.container {
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+  }
