--- a/src/stylesheets/Item.scss
+++ b/src/stylesheets/Item.scss
@@ -1,7 +1,8 @@
 @import 'Variables';
 @import 'Mixins';
 
-.containerList{
+.containerItem{
     @include flexColumn();
-  
+    color: red;
+    margin-top: 20px;
 }
