add background to items

--- a/src/stylesheets/Variables.scss
+++ b/src/stylesheets/Variables.scss
@@ -1,9 +1,13 @@
 // colors
 $color1: black;
 $color2: white;
-$color3: #ff0080;
-$color4: #efefef;
-$color5: #54585a;
+$color3: lightcoral;
+$color4: #df4a64;
+$color5: #f8d8dd;
+$color6: #157665;
+$color7: #bababa;
+$color8: #efefef;
+$color9: #54585a;
 
 //typography
 $typo1: 'Roboto', sans-serif;
