--- a/src/stylesheets/Item.scss
+++ b/src/stylesheets/Item.scss
@@ -3,5 +3,9 @@
 
 .containerItem{
     @include flex();
-    margin-top: 20px;
+    background-color: $color3;
+    border-radius: 20px;
+    margin-top: 5px;
+    padding: 15px;
+    width: 280px;
 }
