--- a/src/stylesheets/ListItem.scss
+++ b/src/stylesheets/ListItem.scss
@@ -4,7 +4,7 @@
 .containerListItem{
     // @include flexColumnStart();
     // width: 320px;
-
     @include flexColumn();
-  
+    margin-top: 15px;
+    
 }
