--- a/src/stylesheets/ListItem.scss
+++ b/src/stylesheets/ListItem.scss
@@ -6,5 +6,14 @@
     // width: 320px;
     @include flexColumn();
     margin-top: 15px;
-    
 }
+
+.containerListItem__total{
+    @include flex();
+    background-color: $color4;
+    border-radius: 20px;
+    margin-top: 5px;
+    padding: 15px;
+    width: 280px;
+   
+  }
