--- a/src/stylesheets/Item.scss
+++ b/src/stylesheets/Item.scss
@@ -9,3 +9,15 @@
     padding: 15px;
     width: 280px;
 }
+
+.containerItem__item--name{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.containerItem__counter{
+    background-color: $color5;
+    padding:  5px 15px 5px 15px;
+    border-radius: 20px;
+
+}
