add display flex to main in app

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -7,5 +7,8 @@
     grid-template-rows: auto 1fr auto;
   }
   .containerMain{
-    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
   }
