fix check icons style

--- a/src/stylesheets/Item.scss
+++ b/src/stylesheets/Item.scss
@@ -15,6 +15,11 @@
     margin-right: 10px;
 }
 
+.containerItem__item--icon{
+    color:$color9;
+    font-size: 16px;
+}
+
 .containerItem__counter{
     background-color: $color5;
     border-radius: 20px;
