--- a/src/stylesheets/InputItem.scss
+++ b/src/stylesheets/InputItem.scss
@@ -5,3 +5,24 @@
     @include flex();
     margin-top: 20px;
 }
+
+.containerInputItem__input{
+    background-color: inherit;
+    border-color: $color6;
+    border-radius: 20px;
+    padding-left: 15px;
+    width: 220px;
+    height: 35px;
+    outline: none;
+}
+
+.containerInputItem__icon{
+    @include flex();
+    background-color: $color6;
+    border-radius: 20px;
+    width: 50px;
+    height: 35px;
+    outline: none;
+    margin-left: 5px;
+
+}
