--- a/src/stylesheets/Item.scss
+++ b/src/stylesheets/Item.scss
@@ -6,8 +6,9 @@
     background-color: $color3;
     border-radius: 20px;
     margin-top: 5px;
-    padding: 15px;
+    padding: 10px;
     width: 280px;
+    text-transform: capitalize;
 }
 
 .containerItem__item--name{
