--- a/src/stylesheets/Mixins.scss
+++ b/src/stylesheets/Mixins.scss
@@ -14,6 +14,11 @@
   justify-content: center;
   align-items: center;
 }
+@mixin flexStart() {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
 
 @mixin flexBetween() {
   display: flex;
