--- a/src/stylesheets/Item.scss
+++ b/src/stylesheets/Item.scss
@@ -12,7 +12,7 @@
 }
 
 
-
+// left
 .containerItemLeft{
     @include flexStart();
     margin-left: 20px;
@@ -22,7 +22,7 @@
 }
 
 
-
+// right
 .containerItemRight{
     @include flex();
     margin-right: 20px;
