--- a/src/stylesheets/SortButton.scss
+++ b/src/stylesheets/SortButton.scss
@@ -1,2 +1,10 @@
 @import 'Variables';
 @import 'Mixins';
+
+.sortBtn{
+    @include btn();
+    background-color: $color7;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
