--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -11,6 +11,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+    margin-bottom: 40px;
   }
   .containerMain__btns{
     margin-top: 20px;
