--- a/src/stylesheets/SortButton.scss
+++ b/src/stylesheets/SortButton.scss
@@ -4,7 +4,8 @@
 .sortBtn{
     @include btn();
     background-color: $color7;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
+    margin: 0 5px 0 5px;
 }
