--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -16,3 +16,15 @@
   .containerMain__btns{
     margin-top: 20px;
   }
+  .containerMain__btns--total{
+    background: none;
+    border: none;
+    color: inherit;
+    outline: inherit;
+    padding: 0;
+    background-color: $color4;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 0 5px 0 5px;
+  }
