add 3 watermelon slices to header

--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -5,6 +5,10 @@
     @include flexColumn();
     margin-top: 20px;
 }
+.containerHeader__watermelons{
+    @include flex();
+    transform: scale(80%);
+}
 .containerHeader__title{
     font-size: 20px;
 }
