--- a/src/stylesheets/Watermelon.scss
+++ b/src/stylesheets/Watermelon.scss
@@ -1,7 +1,9 @@
 @import 'Variables';
 @import 'Mixins';
 
-
+.containerWatermelon{
+  margin-left: 5px;
+}
 .watermelon {
     width: 100px;
     height: 50px;
