--- a/src/stylesheets/Watermelon3.scss
+++ b/src/stylesheets/Watermelon3.scss
@@ -1,10 +1,10 @@
 @import 'Variables';
 @import 'Mixins';
 
-.containerWatermelon{
-  margin-left: 5px;
+.containerWatermelon3{
+  margin-left: -3px;
 }
-.watermelon {
+.watermelon3{
     width: 100px;
     height: 50px;
     margin: auto;
@@ -12,54 +12,54 @@
     border-radius: 100px 100px 0 0;
     background-image: radial-gradient($color4 65%, #D0C29B 0, #D0C29B 68%, $color6 0);
     background-size: 100px 100px;
-    transform: rotate(180deg);
+    transform: rotate(170deg);
     position: relative;
   }
 
  
-  .dot {
+  .dot3 {
     width: 5px;
     height: 3px;
     border-radius: 50%;
     background-color: #333;
     position: absolute;
   }
-  .dot:nth-child(8n) {
+  .dot3:nth-child(8n) {
     left: 12px;
     top: 40px;
     transform: rotate(-45deg);
   }
-  .dot:nth-child(8n+1) {
+  .dot3:nth-child(8n+1) {
     left: 25px;
     top: 30px;
     transform: rotate(15deg);
   }
-  .dot:nth-child(8n+2) {
+  .dot3:nth-child(8n+2) {
     left: 40px;
     top: 40px;
     transform: rotate(35deg);
   }
-  .dot:nth-child(8n+3) {
+  .dot3:nth-child(8n+3) {
     left: 40px;
     top: 20px;
     transform: rotate(10deg);
   }
-  .dot:nth-child(8n+4) {
+  .dot3:nth-child(8n+4) {
     left: 55px;
     top: 30px;
     transform: rotate(120deg);
   }
-  .dot:nth-child(8n+5) {
+  .dot3:nth-child(8n+5) {
     left: 65px;
     top: 42px;
     transform: rotate(30deg);
   }
-  .dot:nth-child(8n+6) {
+  .dot3:nth-child(8n+6) {
     left: 70px;
     top: 25px;
     transform: rotate(190deg);
   }
-  .dot:nth-child(8n+7) {
+  .dot3:nth-child(8n+7) {
     left: 80px;
     top: 37px;
     transform: rotate(310deg);
