--- a/src/stylesheets/Variables.scss
+++ b/src/stylesheets/Variables.scss
@@ -10,7 +10,6 @@ $color8: #efefef;
 $color9: #54585a;
 
 //typography
-$typo1: 'Roboto', sans-serif;
+$typo1: 'Poppins', sans-serif;
 $typo2: 'Roboto Condensed', sans-serif;
-$typo3: 'Open Sans', sans-serif;
-$typoNeon: 'Nixie One', cursive;
+
