--- a/src/stylesheets/Variables.scss
+++ b/src/stylesheets/Variables.scss
@@ -12,4 +12,5 @@ $color9: #54585a;
 //typography
 $typo1: 'Poppins', sans-serif;
 $typo2: 'Roboto Condensed', sans-serif;
+$typo3: 'Roboto', sans-serif;
 
