--- a/src/stylesheets/ListPrinted.scss
+++ b/src/stylesheets/ListPrinted.scss
@@ -12,4 +12,9 @@
 
 .date{
     margin-top: 20px;
+    background-color: $color6;
+    border-radius: 20px;
+    margin-top: 5px;
+    padding:  10px 0px 10px 0px;
+    width: 280px;
 }
