add a responsive header

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -16,3 +16,10 @@
   .containerMain__btns{
     margin-top: 20px;
   }
+
+  @media all and (min-width: 768px) {
+  }
+  
+  @media all and (min-width: 1280px) {
+  }
+  
