--- a/src/stylesheets/Item.scss
+++ b/src/stylesheets/Item.scss
@@ -11,7 +11,6 @@
     text-transform: capitalize;
 }
 
-
 // left
 .containerItemLeft{
     @include flexStart();
@@ -23,7 +22,6 @@
 .containerItemLeft__icon{
     cursor: pointer;
 }
-
 
 // right
 .containerItemRight{
@@ -46,4 +44,26 @@
 .containerItemRight__deleteBtn{
     @include btn();
     margin-left: 10px;
+}
+
+
+// RESPONSIVE
+@media all and (min-width: 768px) {
+
+    .containerItem{ 
+        width: 480px;
+    }
+    .containerItemLeft{
+        margin-left: 30px;
+    }
+    .containerItemLeft__name{
+        margin-left: 10px;
+        font-size: 16px;
+    }
+    .containerItemRight{
+        margin-right: 30px;
+    }
+    .containerItemRight__counter{
+        font-size: 16px;
+    }
 }
