--- a/src/stylesheets/ListItem.scss
+++ b/src/stylesheets/ListItem.scss
@@ -14,3 +14,17 @@
     padding: 12px;
     width: 280px;
   } 
+
+  // RESPONSIVE
+@media all and (min-width: 768px) {
+
+    .containerListItem{
+        margin-top: 20px;
+    }
+    .containerListItem__total{
+        font-size: 16px;
+        width: 480px;
+      } 
+
+
+}
