--- a/src/stylesheets/PrintButton.scss
+++ b/src/stylesheets/PrintButton.scss
@@ -9,3 +9,10 @@
     border-radius: 50%;
     margin: 0 5px 0 5px;
 }
+  // RESPONSIVE
+  @media all and (min-width: 768px) {
+    .printBtn{ 
+        width: 50px;
+        height: 50px;
+    }
+  }
