--- a/src/stylesheets/ResetButton.scss
+++ b/src/stylesheets/ResetButton.scss
@@ -9,3 +9,11 @@
     border-radius: 50%;
     margin: 0 5px 0 5px;
 }
+
+  // RESPONSIVE
+  @media all and (min-width: 768px) {
+    .resetBtn{ 
+        width: 50px;
+        height: 50px;
+    }
+  }
