--- a/src/stylesheets/Variables.scss
+++ b/src/stylesheets/Variables.scss
@@ -4,7 +4,11 @@ $color2: white;
 $color3: lightcoral;
 $color4: #df4a64;
 $color5: #f8d8dd;
-$color6: #157665;
+// $color6: #157665;
+// $color6: #00BB2D;
+// $color6: #0DB02B;
+// $color6: #A1DB87;
+$color6: #88B04B;
 $color7: #bababa;
 $color8: #efefef;
 $color9: #54585a;
