--- a/src/stylesheets/Variables.scss
+++ b/src/stylesheets/Variables.scss
@@ -8,7 +8,11 @@ $color5: #f8d8dd;
 // $color6: #00BB2D;
 // $color6: #0DB02B;
 // $color6: #A1DB87;
-$color6: #88B04B;
+// $color6: #88B04B;
+// Colores de la imagen
+// $color6: #bada31;
+$color6: #7a9d27;
+$color6B: #497b32;
 $color7: #bababa;
 $color8: #efefef;
 $color9: #54585a;
