--- a/src/stylesheets/Footer.scss
+++ b/src/stylesheets/Footer.scss
@@ -26,14 +26,13 @@
 
 @media all and (min-width: 768px) {
   .footer {
-    font-size: 16px;
     margin-bottom: 30px;
+  }
+  .icon {
+    font-size: 16px;
   }
   .footer__item {
     margin-left: 8px;
     margin-right: 8px;
   }
-}
-
-@media all and (min-width: 1280px) {
 }
