add nested app scss

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -12,14 +12,7 @@
     align-items: center;
     margin-top: 20px;
     margin-bottom: 40px;
+    &__btns{
+      margin-top: 20px;
+    }
   }
-  .containerMain__btns{
-    margin-top: 20px;
-  }
-
-  @media all and (min-width: 768px) {
-  }
-  
-  @media all and (min-width: 1280px) {
-  }
-  
