--- a/src/stylesheets/Item.scss
+++ b/src/stylesheets/Item.scss
@@ -9,13 +9,23 @@
     padding:  10px 0px 10px 0px;
     width: 280px;
     text-transform: capitalize;
+    @media (min-width: 768px) { 
+        width: 480px;
+    }
 }
 
 .containerItemLeft{
     @include flexStart();
     margin-left: 20px;
+    @media (min-width: 768px) { 
+        margin-left: 30px;
+    }
     &__name{
         margin-left: 5px;
+        @media (min-width: 768px) { 
+            margin-left: 10px;
+            font-size: 16px;
+        }
     }
     &__icon{
         cursor: pointer;
@@ -25,10 +35,16 @@
 .containerItemRight{
     @include flex();
     margin-right: 20px;
+    @media (min-width: 768px) { 
+        margin-right: 30px;
+    }
     &__counter{
         background-color: $color5;
         border-radius: 20px;
         padding:  3px 10px 3px 10px;
+        @media (min-width: 768px) {
+            font-size: 16px; 
+        }
         &--btnL{
             @include btn();
             margin-right: 5px;
@@ -41,27 +57,5 @@
     &__deleteBtn{
         @include btn();
         margin-left: 10px;
-    }
-}
-
-
-// RESPONSIVE
-@media all and (min-width: 768px) {
-
-    .containerItem{ 
-        width: 480px;
-    }
-    .containerItemLeft{
-        margin-left: 30px;
-    }
-    .containerItemLeft__name{
-        margin-left: 10px;
-        font-size: 16px;
-    }
-    .containerItemRight{
-        margin-right: 30px;
-    }
-    .containerItemRight__counter{
-        font-size: 16px;
     }
 }
