--- a/src/stylesheets/Reset.scss
+++ b/src/stylesheets/Reset.scss
@@ -6,7 +6,7 @@
   padding: 0;
   text-decoration: none;
   list-style: none;
-  color: $color1;
+  color: inherit;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
 }
